# aiida-process-coordinator

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
aiida_task/: __init__.py  cli.py  coordinator.py  database.py  server.py  shared.py  worker.py
aiida_task/cli/: __init__.py  daemon.py  database.py  main.py  process.py
