[metadata]
name = aiida_task
version = attr:aiida_task.__version__
description = A proof of principle for a non-RabbitMQ `Process` task control solution
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Sewell
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    circus~=0.17.1
    click>=7,<8
    psutil~=5.6
    pyyaml
    sqlalchemy~=1.4.22
python_requires = ~=3.7

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    aiida-task = aiida_task.cli.main:main
    aiida-worker = aiida_task.worker:start_worker
    aiida-coordinator = aiida_task.server:start_server

[flake8]
max-line-length = 120
